test de Cancion,ArtistaBase y ArtistaContratado